policies/opa/gatekeeper/policies/constraints/psp_users.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: psp-pods-allowed-user-ranges
  namespace: kube-system
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    excludedNamespaces: ["kube-system"]
  parameters:
    # The root UID and GID is 0 so ensuring it is min 1
    runAsUser:
      rule: MustRunAs
      ranges:
        - min: 1
          max: 65535
    runAsGroup:
      rule: MustRunAs
      ranges:
        - min: 1
          max: 65535
    supplementalGroups:
      rule: MustRunAs
      ranges:
        - min: 1
          max: 65535
    fsGroup:
      rule: MustRunAs
      ranges:
        - min: 1
          max: 65535
